--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-22  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation added.
+
 2006-09-25  Pawan Chitrakar  <pchitrakar@gmail.com>
 
 	* ne.po: Updated Nepali Translation
