--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-08  Francisco Javier F. Serrador  <serrador@openshine.com>
+
+	* es.po: Updated Spanish translation.
+
 2006-12-04  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
