--- a/po/es.po
+++ b/po/es.po
@@ -1,5 +1,3 @@
-# traducción de es.po al Spanish
-# translation of es.po to Spanish
 # Spanish messages for GDL.
 # Copyright © 1999, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
 # This file is distributed under the same license as the GDL package.
@@ -8,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: es\n"
+"Project-Id-Version: gdl\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-04 13:11+0100\n"
-"PO-Revision-Date: 2006-12-04 13:14+0100\n"
+"POT-Creation-Date: 2006-12-08 20:35+0100\n"
+"PO-Revision-Date: 2006-12-08 20:35+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -196,7 +194,7 @@ msgstr "Elementos empotrados"
 
 #: ../gdl/gdl-dock-layout.c:747 ../gdl/layout.glade.h:3
 msgid "Saved layouts"
-msgstr "Colocación guardada"
+msgstr "Colocaciones guardadas"
 
 #: ../gdl/gdl-dock-layout.c:789
 #, c-format
@@ -376,14 +374,15 @@ msgstr "Nivel superior flotante"
 
 #: ../gdl/gdl-dock-placeholder.c:185
 msgid "Whether the placeholder is standing in for a floating toplevel dock"
-msgstr "Insica si el lugar reservado está esperando para un empotrable flotante de nivel superior"
+msgstr ""
+"Insica si el lugar reservado está esperando para un empotrable flotante de "
+"nivel superior"
 
 #: ../gdl/gdl-dock-placeholder.c:191
 msgid "X-Coordinate"
 msgstr "Coordenada X"
 
 #: ../gdl/gdl-dock-placeholder.c:192
-#, fuzzy
 msgid "X-Coordinate fow dock when floating"
 msgstr "Coordenada X para un empotrable flotante"
 
@@ -392,7 +391,6 @@ msgid "Y-Coordinate"
 msgstr "Coordenada Y"
 
 #: ../gdl/gdl-dock-placeholder.c:199
-#, fuzzy
 msgid "Y-Coordinate fow dock when floating"
 msgstr "Coordenada Y para un empotrable flotante"
 
@@ -403,7 +401,8 @@ msgstr "Intenta empotrar un objeto empotrable a un contenedor suelto"
 #: ../gdl/gdl-dock-placeholder.c:618
 #, c-format
 msgid "Got a detach signal from an object (%p) who is not our host %p"
-msgstr "Se obtuvo una señal suelta desde un objeto (%p) que no es nuestro host %p"
+msgstr ""
+"Se obtuvo una señal suelta desde un objeto (%p) que no es nuestro host %p"
 
 #: ../gdl/gdl-dock-placeholder.c:643
 #, c-format
