--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+=== GDL 0.7.0 ===
+
+2007-01-14  Naba Kumar  <naba@gnome.org>
+
+	* NEWS: updated for 0.7.0 release.
+	
 2006-09-18  Johannes Schmid <jhs@gnome.org>
 
 	* configure.in:
