--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-16  Pema Geyleg  <pema.geyleg@gmail.com>
+
+	* configure.in: Added 'dz' to ALL_LINGUAS.
+
 === GDL 0.7.0 ===
 
 2007-01-14  Naba Kumar  <naba@gnome.org>
