--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-19  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2007-01-16  Pema Geyleg  <pema.geyleg@gmail.com>
 
 	* dz.po: Added Dzongkha Translation.
