--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 0.7.2
+
+* Install gdl-gnome.pc only if build with gnome support (bug #403044)
+* Translation updates: en_GB, sv, ja
+
 Changes in 0.7.1
 
 * Use canonical property names (#381845)
