--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in 0.7.3
+
+* Improved docking algorithm
+
 Changes in 0.7.2
 
 * Install gdl-gnome.pc only if build with gnome support (bug #403044)
