--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-01  Naba Kumar  <naba@gnome.org>
+
+	* gdl/gdl-dock-item-grip.c: Added a 5 px alignment just
+	before the item icon.
+	
 === gdl 0.7.3 ===
 
 2007-03-25  Naba Kumar  <naba@gnome.org>
