--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-15  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+	* POTFILES.in: Added missing file
+
 2007-04-14  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Added Arabic Translation.
