--- a/po/ar.po
+++ b/po/ar.po
@@ -1,30 +1,29 @@
-# Arabic translations for PACKAGE package.
+# Arabic translations for THIS package.
 # Copyright (C) 2007 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as THIS package.
 # Automatically generated, 2007.
-#
+# Djihed Afifi <djihed@gmail.com>, 2007
 msgid ""
 msgstr ""
 "Project-Id-Version: Arabic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-04-14 18:22+0100\n"
-"PO-Revision-Date: 2007-04-14 18:39+0100\n"
+"POT-Creation-Date: 2007-04-21 22:52+0100\n"
+"PO-Revision-Date: 2007-04-14 18:49+0100\n"
 "Last-Translator: Djihed Afifi <djihed@gmail.com>\n"
-"Language-Team: arabeyes <doc@arabeyes.po>\n"
+"Language-Team: Arabeyes <doc@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Arabic\n"
 
 #: ../gdl/gdl-data-view.c:418
 #, fuzzy
 msgid "Expander Size"
-msgstr "حجم الموسّع"
+msgstr "موسّع"
 
 #: ../gdl/gdl-data-view.c:419
 #, fuzzy
 msgid "Size of the expander arrow."
-msgstr "حجم سهم الموسّع"
+msgstr "حجم نافذة المحادثة"
 
 #: ../gdl/gdl-dock-item-grip.c:373
 #, fuzzy
@@ -34,41 +33,37 @@ msgstr "جعل القائمة أيقونة"
 #: ../gdl/gdl-dock-item-grip.c:373
 #, fuzzy
 msgid "Iconify this dock"
-msgstr "إرساء نافذة البرنامج"
+msgstr "أيقونة لهذه النافذة"
 
 #: ../gdl/gdl-dock-item-grip.c:375
-#, fuzzy
 msgid "Close"
-msgstr "اغلق"
+msgstr "أغلق"
 
 #: ../gdl/gdl-dock-item-grip.c:375
 #, fuzzy
 msgid "Close this dock"
-msgstr "اغلق هذا اللسان"
+msgstr "أغلق هذا السجل"
 
-#: ../gdl/gdl-dock-item-grip.c:684
-#: ../gdl/gdl-dock-tablabel.c:128
+#: ../gdl/gdl-dock-item-grip.c:684 ../gdl/gdl-dock-tablabel.c:128
 #, fuzzy
 msgid "Controlling dock item"
-msgstr "خصائص عنصر القائمة"
+msgstr "سِمة التحكّم"
 
 #: ../gdl/gdl-dock-item-grip.c:685
-#, fuzzy
 msgid "Dockitem which 'owns' this grip"
-msgstr "مدير هذا المشروع."
+msgstr ""
 
 #: ../gdl/gdl-dock-item.c:243
 #, fuzzy
 msgid "Orientation"
-msgstr "الإتّجاه"
+msgstr "الإتجاه:"
 
 #: ../gdl/gdl-dock-item.c:244
 #, fuzzy
 msgid "Orientation of the docking item"
-msgstr "خصائص عنصر القائمة"
+msgstr "اتجاه الشريط"
 
 #: ../gdl/gdl-dock-item.c:259
-#, fuzzy
 msgid "Resizable"
 msgstr "قابل للتحجيم"
 
@@ -79,53 +74,56 @@ msgstr ""
 #: ../gdl/gdl-dock-item.c:267
 #, fuzzy
 msgid "Item behavior"
-msgstr "ملائمة آلية"
+msgstr "مظهر الحافة"
 
 #: ../gdl/gdl-dock-item.c:268
-msgid "General behavior for the dock item (i.e. whether it can float, if it's locked, etc.)"
+msgid ""
+"General behavior for the dock item (i.e. whether it can float, if it's "
+"locked, etc.)"
 msgstr ""
 
-#: ../gdl/gdl-dock-item.c:276
-#: ../gdl/gdl-dock-master.c:145
-#, fuzzy
+#: ../gdl/gdl-dock-item.c:276 ../gdl/gdl-dock-master.c:145
 msgid "Locked"
 msgstr "مقفل"
 
 #: ../gdl/gdl-dock-item.c:277
-msgid "If set, the dock item cannot be dragged around and it doesn't show a grip"
+msgid ""
+"If set, the dock item cannot be dragged around and it doesn't show a grip"
 msgstr ""
 
 #: ../gdl/gdl-dock-item.c:285
-#, fuzzy
 msgid "Preferred width"
 msgstr "العرض المفضّل"
 
 #: ../gdl/gdl-dock-item.c:286
 #, fuzzy
 msgid "Preferred width for the dock item"
-msgstr "عرض كل عنصر"
+msgstr "العرض المفضّل"
 
 #: ../gdl/gdl-dock-item.c:292
-#, fuzzy
 msgid "Preferred height"
 msgstr "الإرتفاع المفضّل"
 
 #: ../gdl/gdl-dock-item.c:293
+#, fuzzy
 msgid "Preferred height for the dock item"
-msgstr ""
+msgstr "الإرتفاع المفضّل"
 
 #: ../gdl/gdl-dock-item.c:543
 #, c-format
-msgid "You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or some other compound dock object."
+msgid ""
+"You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or "
+"some other compound dock object."
 msgstr ""
 
 #: ../gdl/gdl-dock-item.c:550
 #, c-format
-msgid "Attempting to add a widget with type %s to a %s, but it can only contain one widget at a time; it already contains a widget of type %s"
+msgid ""
+"Attempting to add a widget with type %s to a %s, but it can only contain one "
+"widget at a time; it already contains a widget of type %s"
 msgstr ""
 
-#: ../gdl/gdl-dock-item.c:1235
-#: ../gdl/gdl-dock-item.c:1280
+#: ../gdl/gdl-dock-item.c:1235 ../gdl/gdl-dock-item.c:1280
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
 msgstr ""
@@ -138,7 +136,6 @@ msgstr "إلغي ال_قفل"
 
 #. Hide menuitem.
 #: ../gdl/gdl-dock-item.c:1374
-#, fuzzy
 msgid "Hide"
 msgstr "إخفاء"
 
@@ -146,27 +143,28 @@ msgstr "إخفاء"
 #: ../gdl/gdl-dock-item.c:1379
 #, fuzzy
 msgid "Lock"
-msgstr "أقفِل"
+msgstr "مقفل"
 
 #: ../gdl/gdl-dock-item.c:1585
 #, c-format
 msgid "Attempt to bind an unbound item %p"
 msgstr ""
 
-#: ../gdl/gdl-dock-layout.c:124
-#: ../gdl/gdl-dock-bar.c:106
+#: ../gdl/gdl-dock-layout.c:124 ../gdl/gdl-dock-bar.c:106
 #, fuzzy
 msgid "Master"
-msgstr "السيّد"
+msgstr "السيد"
 
 #: ../gdl/gdl-dock-layout.c:125
+#, fuzzy
 msgid "GdlDockMaster object which the layout object is attached to"
-msgstr ""
+msgstr "مفتاح GConf الذي يتبع محرّر الخاصية هذا."
 
+# I avoided literal...
 #: ../gdl/gdl-dock-layout.c:132
 #, fuzzy
 msgid "Dirty"
-msgstr "قذر"
+msgstr "قوي"
 
 #: ../gdl/gdl-dock-layout.c:133
 msgid "True if the layouts have changed and need to be saved to a file"
@@ -174,119 +172,121 @@ msgstr ""
 
 #. FIXME: pop up an error dialog
 #: ../gdl/gdl-dock-layout.c:563
-#, c-format
+#, fuzzy, c-format
 msgid "Could not load layout user interface file '%s'"
-msgstr ""
+msgstr "لم يمكن تحميل ملف OMF '%s'."
 
 #: ../gdl/gdl-dock-layout.c:618
-#, fuzzy
 msgid "Visible"
 msgstr "مرئي"
 
 #: ../gdl/gdl-dock-layout.c:625
-#, fuzzy
 msgid "Item"
 msgstr "عنصر"
 
-#: ../gdl/gdl-dock-layout.c:708
-#: ../gdl/gdl-dock-object.c:119
+#: ../gdl/gdl-dock-layout.c:708 ../gdl/gdl-dock-object.c:119
 #, fuzzy
 msgid "Name"
-msgstr "اسم"
+msgstr "الإ_سم"
 
-#: ../gdl/gdl-dock-layout.c:741
-#: ../gdl/layout.glade.h:1
+#: ../gdl/gdl-dock-layout.c:741 ../gdl/layout.glade.h:1
 #, fuzzy
 msgid "Dock items"
-msgstr "نقل العناصر"
+msgstr "؟ عناصر"
 
-#: ../gdl/gdl-dock-layout.c:747
-#: ../gdl/layout.glade.h:3
+#: ../gdl/gdl-dock-layout.c:747 ../gdl/layout.glade.h:3
 #, fuzzy
 msgid "Saved layouts"
-msgstr "التصاميم ال_متوفّرة:"
+msgstr "التصاميم الم_نتقاة:"
 
 #: ../gdl/gdl-dock-layout.c:789
 #, c-format
-msgid "While loading layout: don't know how to create a dock object whose nick is '%s'"
+msgid ""
+"While loading layout: don't know how to create a dock object whose nick is '%"
+"s'"
 msgstr ""
 
 #: ../gdl/gdl-dock-layout.c:1268
 #, fuzzy
 msgid "Layout managment"
-msgstr "مخطط القائمة"
+msgstr "إدارة المفاتيح:"
 
-#: ../gdl/gdl-dock-master.c:138
-#: ../gdl/gdl-dock.c:183
+#: ../gdl/gdl-dock-master.c:138 ../gdl/gdl-dock.c:183
 #, fuzzy
 msgid "Default title"
-msgstr "عنوان ال_صفحة"
+msgstr "المؤشر الإفتراضي"
 
 #: ../gdl/gdl-dock-master.c:139
+#, fuzzy
 msgid "Default title for newly created floating docks"
-msgstr ""
+msgstr "العرض الافتراضي للملاحظات الجديدة"
 
 #: ../gdl/gdl-dock-master.c:146
-msgid "If is set to 1, all the dock items bound to the master are locked; if it's 0, all are unlocked; -1 indicates inconsistency among the items"
+msgid ""
+"If is set to 1, all the dock items bound to the master are locked; if it's "
+"0, all are unlocked; -1 indicates inconsistency among the items"
 msgstr ""
 
-#: ../gdl/gdl-dock-master.c:154
+#: ../gdl/gdl-dock-master.c:154 ../gdl/gdl-switcher.c:704
 #, fuzzy
 msgid "Switcher Style"
-msgstr "<b>مظهر البرنامج:</b>"
+msgstr "بدّل الزوايا"
 
-#: ../gdl/gdl-dock-master.c:155
+#: ../gdl/gdl-dock-master.c:155 ../gdl/gdl-switcher.c:705
 #, fuzzy
 msgid "Switcher buttons style"
-msgstr "أسلوب أزرار شريط الأدوات"
+msgstr "أسلوب زر النافذة"
 
 #: ../gdl/gdl-dock-master.c:761
 #, c-format
-msgid "master %p: unable to add object %p[%s] to the hash.  There already is an item with that name (%p)."
+msgid ""
+"master %p: unable to add object %p[%s] to the hash.  There already is an "
+"item with that name (%p)."
 msgstr ""
 
 #: ../gdl/gdl-dock-master.c:934
 #, c-format
-msgid "The new dock controller %p is automatic.  Only manual dock objects should be named controller."
+msgid ""
+"The new dock controller %p is automatic.  Only manual dock objects should be "
+"named controller."
 msgstr ""
 
 #: ../gdl/gdl-dock-notebook.c:134
-#, fuzzy
 msgid "Page"
-msgstr "صفحة"
+msgstr "الصفحة"
 
 #: ../gdl/gdl-dock-notebook.c:135
-#, fuzzy
 msgid "The index of the current page"
 msgstr "دليل الصفحة الحالية"
 
 #: ../gdl/gdl-dock-object.c:120
+#, fuzzy
 msgid "Unique name for identifying the dock object"
-msgstr ""
+msgstr "رقم فريد يعرف المظروف"
 
 #: ../gdl/gdl-dock-object.c:127
 #, fuzzy
 msgid "Long name"
-msgstr "الاسم طويل جدا"
+msgstr "اسم الولوج:"
 
 #: ../gdl/gdl-dock-object.c:128
+#, fuzzy
 msgid "Human readable name for the dock object"
-msgstr ""
+msgstr "إسم الطور الذي يمكن لفرد قرائته"
 
 #: ../gdl/gdl-dock-object.c:134
-#, fuzzy
 msgid "Stock Icon"
 msgstr "أيقونة من المخزون"
 
 #: ../gdl/gdl-dock-object.c:135
 #, fuzzy
 msgid "Stock icon for the dock object"
-msgstr "الأيقونة المستعملة لزر الجسم"
+msgstr "انتقي خطا للملاحظة اللاصقة"
 
 #: ../gdl/gdl-dock-object.c:141
 #, fuzzy
 msgid "Dock master"
-msgstr "جاري تعليق السيد..."
+msgstr "نسبة التردد"
 
 #: ../gdl/gdl-dock-object.c:142
 msgid "Dock master this dock object is bound to"
@@ -294,12 +294,16 @@ msgstr ""
 
 #: ../gdl/gdl-dock-object.c:420
 #, c-format
-msgid "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which hasn't implemented this method"
+msgid ""
+"Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
+"hasn't implemented this method"
 msgstr ""
 
 #: ../gdl/gdl-dock-object.c:549
 #, c-format
-msgid "Dock operation requested in a non-bound object %p. The application might crash"
+msgid ""
+"Dock operation requested in a non-bound object %p. The application might "
+"crash"
 msgstr ""
 
 #: ../gdl/gdl-dock-object.c:556
@@ -309,30 +313,30 @@ msgstr ""
 
 #: ../gdl/gdl-dock-object.c:598
 #, c-format
-msgid "Attempt to bind to %p an already bound dock object %p (current master: %p)"
+msgid ""
+"Attempt to bind to %p an already bound dock object %p (current master: %p)"
 msgstr ""
 
 #: ../gdl/gdl-dock-paned.c:132
-#, fuzzy
 msgid "Position"
-msgstr "الدرجة"
+msgstr "الموقع"
 
 #: ../gdl/gdl-dock-paned.c:133
 #, fuzzy
 msgid "Position of the divider in pixels"
-msgstr "مكان الصفحة للمعاون"
+msgstr "موضع نافذة الفيديو المحلي"
 
 #: ../gdl/gdl-dock-placeholder.c:143
-#, fuzzy
 msgid "Sticky"
 msgstr "لاصق"
 
 #: ../gdl/gdl-dock-placeholder.c:144
-msgid "Whether the placeholder will stick to its host or move up the hierarchy when the host is redocked"
+msgid ""
+"Whether the placeholder will stick to its host or move up the hierarchy when "
+"the host is redocked"
 msgstr ""
 
 #: ../gdl/gdl-dock-placeholder.c:151
-#, fuzzy
 msgid "Host"
 msgstr "مضيف"
 
@@ -343,15 +347,15 @@ msgstr ""
 #: ../gdl/gdl-dock-placeholder.c:159
 #, fuzzy
 msgid "Next placement"
-msgstr "<b>وضعية المكبّر</b>"
+msgstr "_البديل"
 
 #: ../gdl/gdl-dock-placeholder.c:160
-msgid "The position an item will be docked to our host if a request is made to dock to us"
+msgid ""
+"The position an item will be docked to our host if a request is made to dock "
+"to us"
 msgstr ""
 
-#: ../gdl/gdl-dock-placeholder.c:169
-#: ../gdl/gdl-dock.c:190
-#, fuzzy
+#: ../gdl/gdl-dock-placeholder.c:169 ../gdl/gdl-dock.c:190
 msgid "Width"
 msgstr "العرض"
 
@@ -359,11 +363,10 @@ msgstr "العرض"
 msgid "Width for the widget when it's attached to the placeholder"
 msgstr ""
 
-#: ../gdl/gdl-dock-placeholder.c:177
-#: ../gdl/gdl-dock.c:198
+#: ../gdl/gdl-dock-placeholder.c:177 ../gdl/gdl-dock.c:198
 #, fuzzy
 msgid "Height"
-msgstr "الإرتفاع"
+msgstr "ثمانية"
 
 #: ../gdl/gdl-dock-placeholder.c:178
 msgid "Height for the widget when it's attached to the placeholder"
@@ -372,7 +375,7 @@ msgstr ""
 #: ../gdl/gdl-dock-placeholder.c:184
 #, fuzzy
 msgid "Floating Toplevel"
-msgstr "ارتفاع المستوى العلوي"
+msgstr "تركيز في المستوى الأعلى"
 
 #: ../gdl/gdl-dock-placeholder.c:185
 msgid "Whether the placeholder is standing in for a floating toplevel dock"
@@ -407,7 +410,9 @@ msgstr ""
 
 #: ../gdl/gdl-dock-placeholder.c:643
 #, c-format
-msgid "Something weird happened while getting the child placement for %p from parent %p"
+msgid ""
+"Something weird happened while getting the child placement for %p from "
+"parent %p"
 msgstr ""
 
 #: ../gdl/gdl-dock-tablabel.c:129
@@ -422,24 +427,25 @@ msgstr ""
 #: ../gdl/gdl-dock-bar.c:114
 #, fuzzy
 msgid "Dockbar style"
-msgstr "<b>مظهر البرنامج:</b>"
+msgstr "أسلوب شري_ط الأدوات"
 
 #: ../gdl/gdl-dock-bar.c:115
 msgid "Dockbar style to show items on it"
 msgstr ""
 
 #: ../gdl/gdl-dock.c:175
-#, fuzzy
 msgid "Floating"
-msgstr "العوم"
+msgstr "طافية"
 
 #: ../gdl/gdl-dock.c:176
+#, fuzzy
 msgid "Whether the dock is floating in its own window"
-msgstr ""
+msgstr "ما اذا يكون تركيز الإدخال ضمن GtkWindow الحالي"
 
 #: ../gdl/gdl-dock.c:184
+#, fuzzy
 msgid "Default title for the newly created floating docks"
-msgstr ""
+msgstr "المسار الافتراضي لنافذة تصفّح الملفات."
 
 #: ../gdl/gdl-dock.c:191
 msgid "Width for the dock when it's of floating type"
@@ -452,44 +458,44 @@ msgstr ""
 #: ../gdl/gdl-dock.c:206
 #, fuzzy
 msgid "Float X"
-msgstr "عشري"
+msgstr "طفو"
 
 #: ../gdl/gdl-dock.c:207
+#, fuzzy
 msgid "X coordinate for a floating dock"
-msgstr ""
+msgstr "إحداثي الشريط السيني"
 
 #: ../gdl/gdl-dock.c:214
 #, fuzzy
 msgid "Float Y"
-msgstr "عشري"
+msgstr "طفو"
 
 #: ../gdl/gdl-dock.c:215
+#, fuzzy
 msgid "Y coordinate for a floating dock"
-msgstr ""
+msgstr "إحداثي الشريط الصادي"
 
 #: ../gdl/gdl-dock.c:496
 #, fuzzy, c-format
 msgid "Dock #%d"
 msgstr "إرساء"
 
-#: ../gdl/gdl-icons.c:133
-#: ../gdl/gdl-icons.c:134
-#, fuzzy
+#: ../gdl/gdl-icons.c:133 ../gdl/gdl-icons.c:134
 msgid "Icon size"
 msgstr "حجم الأيقونة"
 
 #: ../gdl/layout.glade.h:2
 #, fuzzy
 msgid "Layout Managment"
-msgstr "مخطط القائمة"
+msgstr "إدارة الحسابات"
 
 #: ../gdl/layout.glade.h:4
 #, fuzzy
 msgid "_Load"
-msgstr "_تحميل"
+msgstr "الحِمل:"
 
 #: ../gdl/layout.glade.h:5
 #, fuzzy
 msgid "_Lock dock items"
-msgstr "فك قفل كلّ العناصر الأخرى"
+msgstr "أ_قفل الملاحظات"
 
