--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 0.7.4
+
+* Added a button-like tab switcher widget for notebook docks.
+* Panes now resize proportionately.
+* Fixed resizing error.
+
 Changes in 0.7.3
 
 * Improved docking algorithm
