--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-24  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2007-06-21  Pema Geyleg <pema.geyleg@gmail.com>
 
 	* dz.po: Updated dzongkha translation
