--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-27  Raivis Dejus  <orvils@gmail.com>
+
+        * lv.po: Added Latvian Translation.
+        * LINGUAS: Added Latvian Translation.
+
 2007-06-24  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
 	* ja.po: Updated Japanese translation.
