--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-06  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2007-07-27  Raivis Dejus  <orvils@gmail.com>
 
         * lv.po: Added Latvian Translation.
