--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-12  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+	* LINGUAS: Added 'gl'.
+
 2007-08-06  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
