Fixes Bug #407393 %Gâ%@ (void)0 will cause build fail on Sun cc.
        * gdl/gdl-tools.h: Fixes Bug #407393 %Gâ%@ (void)0 will cause build fail on
        Sun cc.


svn path=/trunk/; revision=380

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-14  Naba Kumar  <naba@gnome.org>
+
+	Patch from Halton Huo:
+	* gdl/gdl-tools.h: Fixes Bug #407393 – (void)0 will cause build fail on
+	Sun cc.
+
 2007-07-21  Johannes Schmid <jhs@gnome.org>
 
 	* configure.in:
