--- a/po/oc.po
+++ b/po/oc.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: gdl 0.3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-02-01 20:40+0100\n"
-"PO-Revision-Date: 2007-07-29 10:23+0200\n"
-"Last-Translator: Yannig MARCHEGAY <yannig@marchegay.org>\n"
+"PO-Revision-Date: 2007-08-07 14:02+0200\n"
+"Last-Translator: Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -407,7 +407,7 @@ msgstr ""
 #: gdl/gdl-recent.c:409
 #, c-format
 msgid "Open %s"
-msgstr "Dubrir %s"
+msgstr "Dobrir %s"
 
 #: gdl/gdl-icons.c:141 gdl/gdl-icons.c:142
 msgid "Icon size"
@@ -587,7 +587,7 @@ msgstr "Sortir"
 
 #: symbol-browser-control/test-symbol-browser-ui.xml.h:2
 msgid "Open Project"
-msgstr "Dubrir un projècte"
+msgstr "Dobrir un projècte"
 
 #: symbol-browser-control/test-symbol-browser-ui.xml.h:3
 msgid "Save Project"
@@ -627,7 +627,7 @@ msgstr ""
 
 #: symbol-browser-control/test-symbol-browser.c:168
 msgid "Open file..."
-msgstr "Dubrir un fichièr..."
+msgstr "Dobrir un fichièr..."
 
 #: symbol-browser-control/test-symbol-browser.c:170
 msgid "Set current file..."
