--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-09-26  Johannes Schmid <jhs@gnome.org>
 
+	Patch by <genbell@tiscali.it>:
+
+	* gdl/gdl-dock-item-grip.c: (gdl_dock_item_grip_set_property):
+
+	Fix #462537 – GdlDockItemGrip notification callback
+
+2007-09-26  Johannes Schmid <jhs@gnome.org>
+
 	* autogen.sh:
 	Fixed #468645 and #452331 by using gnome-autogen.sh instead
 	of a buggy custom implementation
