--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-23  Matej Urbančič <mateju@svn.gnome.org>
+
+	* sl.po: Added Slovenian translation
+
 2007-10-23  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
