--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-30  Alexander Shopov  <ash@contact.bg>
+
+	* LINGUAS: Added bg (Bulgarian)
+	* bg.po: Updated Bulgarian translation by
+	Alexander Shopov <ash@contact.bg>
+
 2007-10-23  Matej Urbančič <mateju@svn.gnome.org>
 
 	* sl.po: Added Slovenian translation
