--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-06  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Added Korean translation by Namhyung Kim.
+	* LINGUAS: Added ko.
+
 2007-11-30  Alexander Shopov  <ash@contact.bg>
 
 	* LINGUAS: Added bg (Bulgarian)
