--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-17  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2007-12-06  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Added Korean translation by Namhyung Kim.
