--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,7 @@
-2007-12-17  Kjartan Maraas  <kmaraas@gnome.org>
+2007-12-31  Yannig Marchegay <yannig@marchegay.org>
+
+	* oc.po: Updated Occitan translation.
+2007-12-17  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
 
