--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
+
+	* LINGUAS: Added "eu" (Basque) entry.
+	* eu.po: Added Basque translation.
+
 2008-01-12  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
@@ -5,7 +10,8 @@
 2007-12-31  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
-2007-12-17  Kjartan Maraas  <kmaraas@gnome.org>
+
+2007-12-17  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
 
