--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-18  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-01-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
 	* LINGUAS: Added "eu" (Basque) entry.
