--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+=== gdl 0.7.8 ===
+
+2008-01-28  Naba Kumar  <naba@gnome.org>
+
+	* NEWS, configure.in: Bumped version to 0.7.8 and updated news.
+
+	* gdl/gdl-dock-item.c: (gdl_dock_item_dock):
+	* gdl/gdl-switcher.c: (gdl_switcher_expose),
+	(gdl_switcher_switch_page_cb), (gdl_switcher_class_init): Silenced
+	some compiler warnings.
+
 2008-01-18  Naba Kumar  <naba@gnome.org>
 
 	* gdl/gdl-dock-placeholder.c: (gdl_dock_placeholder_class_init):
